--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 <body>
     <div class="box-gray">
-        <label for="request"></label>
+        <label for="request">เรื่องที่แจ้ง</label>
         <textarea id="request" rows="10" placeholder="ข้อความ...."></textarea>
-        <label for="displayName"></label>
+        <label for="displayName">ผู้แจ้ง</label>
         <input type="text" id="displayName" value="<?= displayName ?>" readonly placeholder="ผู้แจ้ง...">
         <button onclick="saveRequest()">ส่งข้อความ</button>
     </div>
