--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 <body>
     <iframe id="formframe" src="" frameborder="0"></iframe>
 </body>
-<script src="https://static.line-scdn.net/liff/edge/versions/2.15.0/sdk.js"></script>
+<script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script>
     
     function runApp() {
